--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  script.
+    $(document).ready(() => {
+      window.WebSocket = window.WebSocket || window.MozWebSocket;
+    });
