--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,3 +5,4 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    script(type='text/javascript', src='https://code.jquery.com/jquery-3.5.1.min.js')
