--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,8 @@ doctype html
 html
   head
     title= title
+    link(rel='preconnect',  href='https://fonts.gstatic.com')
+    link(href='https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap' rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
-    script(type='text/javascript', src='https://code.jquery.com/jquery-3.5.1.min.js')
